Sonar refactoring, server.