@@ -1,9 +1,11 @@
-package com.nikitiuk.javabeansinitializer.services;
+package com.nikitiuk.javabeansinitializer.xml.services;
 
-import com.nikitiuk.javabeansinitializer.collections.BeanMapper;
-import com.nikitiuk.javabeansinitializer.collections.XmlCollectedBeans;
+import com.nikitiuk.javabeansinitializer.xml.collections.BeanMapper;
+import com.nikitiuk.javabeansinitializer.xml.collections.XmlCollectedBeans;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
 import java.lang.reflect.Field;
 import java.util.HashMap;
@@ -12,6 +14,8 @@ import java.util.Map;
 public class Initializer {
 
     private static final Logger logger =  LoggerFactory.getLogger(Initializer.class);
+    private static final String VALUE_STRING = "value";
+    private static final String NAME_STRING = "name";
     private Reader reader = new Reader();
 
     public Map<String, Object> initializeBeans(XmlCollectedBeans xmlCollectedBeans) throws Exception{
@@ -21,7 +25,7 @@ public class Initializer {
             initializeMainMethod(beans, xmlCollectedBeans);
             return beans;
         } catch (Exception e){
-            logger.error("Exception caught: " + e);
+            logger.error("Error at Initializer initializeBeans.", e);
             throw e;
         }
     }
@@ -37,8 +41,8 @@ public class Initializer {
                 Object bean = insertBeanProperties(mapperEntry.getValue().getPropertiesMap(), beanClass.getDeclaredConstructor().newInstance());
                 beanObjects.put(mapperEntry.getValue().getAttributesMap().get("id").toString(), bean);
             }
-            catch (Exception ex){
-                logger.error("Exception caught: " + ex + " Cannot instantiate bean.");
+            catch (Exception e){
+                logger.error("Cannot instantiate bean. Error at Initializer createObjectsFromBeanData.", e);
             }
         }
         return beanObjects;
@@ -52,30 +56,31 @@ public class Initializer {
             }
             return beanObjects;
         } catch (Exception e){
-            logger.error("Exception caught during importing additional beans: " + e);
+            logger.error("Error while caught during importing additional beans.", e);
             throw e;
         }
     }
 
     private Object insertBeanProperties(Map<String,Map<String,String>> propertiesMap, Object bean) throws Exception{
         try {
-            Object beanUpd = bean.getClass().newInstance();
+            Object beanUpd = bean.getClass().getConstructor().newInstance();
+            /*Object beanUpd = bean.getClass().newInstance();*/
             for (Map.Entry<String,Map<String,String>> entry: propertiesMap.entrySet()){
-                String propName = entry.getValue().get("name");
+                String propName = entry.getValue().get(NAME_STRING);
                 Class<?> fieldType = bean.getClass().getDeclaredField(propName).getType();
                 /*if(entry.getValue().containsKey("value")){
                     Class<?> fieldTypeToCheck = Converter.getTypeOfVariable(entry.getValue().get("value"));                                   //debug code to check field types from
                     logger.info("Field Type of Person: " + fieldType.toString() + " vs Field Type to Check: " + fieldTypeToCheck.toString()); //xml and preset bean field types
                 }*/
-                if(entry.getValue().containsKey("value") && fieldType == Converter.getTypeOfVariable(entry.getValue().get("value"))){
-                    Field field = bean.getClass().getDeclaredField(entry.getValue().get("name"));
+                if(entry.getValue().containsKey(VALUE_STRING) && fieldType == Converter.getTypeOfVariable(entry.getValue().get(VALUE_STRING))){
+                    Field field = bean.getClass().getDeclaredField(entry.getValue().get(NAME_STRING));
                     field.setAccessible(true);
-                    field.set(beanUpd, Converter.convertAndGetValue(entry.getValue().get("value")));
+                    field.set(beanUpd, Converter.convertAndGetValue(entry.getValue().get(VALUE_STRING)));
                 }
             }
             return beanUpd;
         } catch (Exception e){
-            logger.error("Exception caught: " + e);
+            logger.error("Error at Initializer insertBeanProperties.", e);
             throw e;
         }
     }
@@ -89,7 +94,7 @@ public class Initializer {
     private void wireBeans(Map<String, Object> initializedBeans, Object beanWhereToInsertWiring, Map<String, Map<String,String>> propertiesMapOfBeanWhereToInsertWiring){
         for(Map.Entry<String,Map<String,String>> propertyEntry : propertiesMapOfBeanWhereToInsertWiring.entrySet()){
             if(propertyEntry.getValue().containsKey("ref")){
-                wire(initializedBeans.get(propertyEntry.getValue().get("ref")), beanWhereToInsertWiring, propertyEntry.getValue().get("name"));
+                wire(initializedBeans.get(propertyEntry.getValue().get("ref")), beanWhereToInsertWiring, propertyEntry.getValue().get(NAME_STRING));
             }
         }
     }
@@ -101,7 +106,7 @@ public class Initializer {
             Method setWiring = beanWhereToInsertWiring.getClass().getDeclaredMethod("set"+capitalizedFirst+others, beanToWire.getClass());
             setWiring.invoke(beanWhereToInsertWiring, beanToWire);
         } catch (Exception e){
-            logger.error("Exception caught while wiring beans: " + e);
+            logger.error("Error while wiring beans.", e);
         }
     }
 
@@ -112,7 +117,7 @@ public class Initializer {
             Method mainMethod = beanWhoseMainMethodWillBeInitialized.getClass().getDeclaredMethod(mainMethodMap.get("method"));
             mainMethod.invoke(beanWhoseMainMethodWillBeInitialized);
         } catch (Exception e){
-            logger.error("Exception caught while initializing main method: " + e);
+            logger.error("Error while initializing main method.", e);
         }
     }
 }
